@@ -28,12 +28,14 @@ class CalculatedBusImpl extends AbstractBus implements CalculatedBus {
     private final Function<Terminal, Bus> getBusFromTerminal;
 
     private NodeTerminal terminalRef;
+    private final int referenceNode;
 
     CalculatedBusImpl(String id, String name, boolean fictitious, VoltageLevelExt voltageLevel, TIntArrayList nodes, List<NodeTerminal> terminals, Function<Terminal, Bus> getBusFromTerminal) {
         super(id, name, fictitious, voltageLevel);
         this.terminals = Objects.requireNonNull(terminals);
         this.getBusFromTerminal = Objects.requireNonNull(getBusFromTerminal);
         this.terminalRef = findTerminal(voltageLevel, nodes, terminals);
+        this.referenceNode = nodes.isEmpty() ? -1 : nodes.getQuick(0);
     }
 
     /**
@@ -49,9 +51,19 @@ class CalculatedBusImpl extends AbstractBus implements CalculatedBus {
      */
     private static NodeTerminal findTerminal(VoltageLevelExt voltageLevel, TIntArrayList nodes, List<NodeTerminal> terminals) {
         if (!terminals.isEmpty()) {
-            return terminals.get(0);
+            return terminals.getFirst();
         }
         return (NodeTerminal) Networks.getEquivalentTerminal(voltageLevel, nodes.getQuick(0));
+    }
+
+    private NodeTerminal findTerminal(VoltageLevelExt voltageLevel, List<NodeTerminal> terminals) {
+        if (!terminals.isEmpty()) {
+            return terminals.getFirst();
+        }
+        if (referenceNode < 0) {
+            return null;
+        }
+        return (NodeTerminal) Networks.getEquivalentTerminal(voltageLevel, referenceNode);
     }
 
     private void checkValidity() {
@@ -113,6 +125,8 @@ class CalculatedBusImpl extends AbstractBus implements CalculatedBus {
     @Override
     public double getV() {
         checkValidity();
+        //since toggling retained switch should not invalidate cache, the terminal (the equivalent terminal) is resolved in the getter
+        terminalRef = findTerminal(voltageLevel, terminals);
         return terminalRef == null ? Double.NaN : terminalRef.getV();
     }
 
@@ -128,6 +142,8 @@ class CalculatedBusImpl extends AbstractBus implements CalculatedBus {
     @Override
     public double getAngle() {
         checkValidity();
+        //since toggling retained switch should not invalidate cache, the terminal (the equivalent terminal) is resolved in the getter
+        terminalRef = findTerminal(voltageLevel, terminals);
         return terminalRef == null ? Double.NaN : terminalRef.getAngle();
     }
 
